--- a/examples/demo/otel-collector-config.yaml
+++ b/examples/demo/otel-collector-config.yaml
@@ -19,6 +19,12 @@ exporters:
     endpoint: jaeger-all-in-one:14250
     insecure: true
 
+  file:
+    path: /home/data/exported.json
+  
+  file/2:
+    path: /home/data/exported2.json
+
 processors:
   batch:
 
@@ -35,8 +41,8 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [logging, zipkin, jaeger]
+      exporters: [logging, zipkin, jaeger,file]
     metrics:
       receivers: [otlp]
       processors: [batch]
-      exporters: [logging, prometheus]
+      exporters: [logging, prometheus,file/2]
