--- a/exporter/site24x7exporter/testdata/config.yaml
+++ b/exporter/site24x7exporter/testdata/config.yaml
@@ -6,14 +6,9 @@ processors:
 
 exporters:
   site24x7:
-  site24x7/2:
-    # This will write the pipeline data to a JSON file.
-    # The data is written in Protobuf JSON encoding
-    # (https://developers.google.com/protocol-buffers/docs/proto3#json).
-    # Note that there are no compatibility guarantees for this format, since it
-    # just a dump of internal structures which can be changed over time.
-    # This intended for primarily for debugging Collector without setting up backends.
-    path: ./filename.json
+    url: "https://logu.site24x7.com/upload/site24x7postservlet"
+    apikey: ab_123
+
 
 service:
   pipelines:
@@ -23,4 +18,4 @@ service:
       exporters: [site24x7]
     metrics:
       receivers: [nop]
-      exporters: [site24x7,site24x7/2]
+      exporters: [site24x7]
